Fix footer text visibility

--- a/src/components/footer/footer.module.sass
+++ b/src/components/footer/footer.module.sass
@@ -8,6 +8,8 @@
   margin-top: 50px
   padding: 50px 0
   position: relative
+  text-shadow: 0 1px 0 #fab823
+  font-weight: bold
 
   +media('>tablet')
     margin-top: 120px
